TOSQUASH: fix criteria font-sizing

--- a/app/assets/stylesheets/views/_brexit_checker_results_page.scss
+++ b/app/assets/stylesheets/views/_brexit_checker_results_page.scss
@@ -1,5 +1,6 @@
 .brexit-checker-results-page {
-  .brexit-checker__criteria {
+  .brexit-checker__critera_explaination,
+  .brexit-checker__criterion {
     @include govuk-font(16);
   }
 
